--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "knex": "^0.95.7",
     "knex-cleaner": "^1.3.1",
     "pg": "^8.6.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
