--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "knex-cleaner": "^1.3.1",
     "pg": "^8.6.0",
     "sqlite3": "^5.0.2",
+    "stripe": "^8.189.0",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
