--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.7",
+    "knex": "^1.0.3",
     "knex-cleaner": "^1.3.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "pg": "^8.6.0",
     "sqlite3": "^5.0.2",
     "stripe": "^8.189.0",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
