--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.7",
     "knex-cleaner": "^1.3.1",
+    "mysql": "^2.18.1",
     "pg": "^8.6.0",
     "sqlite3": "^5.0.2",
     "stripe": "^8.189.0",
