--- a/package.json
+++ b/package.json
@@ -22,17 +22,21 @@
     "@vscode/sqlite3": "^5.0.7",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.2",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
     "knex-cleaner": "^1.3.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "path": "^0.12.7",
     "pg": "^8.6.0",
     "stripe": "^8.189.0",
     "universal-cookie": "^4.0.4",
