--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
+    "firebase-functions": "^3.21.2",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.3",
